[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/HelperScenes/Items/PowerupPill.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Items/Bomb.gd" type="Script" id=2]
[ext_resource path="res://Resources/Audio/FX/Bomb2.wav" type="AudioStream" id=3]
[ext_resource path="res://Scenes/MainScenes/Audio.gd" type="Script" id=4]
[ext_resource path="res://Scripts/FX/Particles.gd" type="Script" id=5]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.891304, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2000.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 160.0
damping_random = 1.0
scale = 10.0
scale_random = 1.0
scale_curve = SubResource( 4 )

[node name="Bomb" type="Node2D"]
scale = Vector2( 0.7, 0.7 )

[node name="PowerupPill" parent="." instance=ExtResource( 1 )]
collision_layer = 8
collision_mask = 3
script = ExtResource( 2 )
rot_speed = 6

[node name="ExplosionTimer" type="Timer" parent="PowerupPill"]
wait_time = 3.0
one_shot = true

[node name="CountdownTimer" type="Timer" parent="PowerupPill"]
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PowerupPill"]
stream = ExtResource( 3 )
pitch_scale = 0.9
script = ExtResource( 4 )

[node name="ExplosionParticles" type="Particles2D" parent="PowerupPill"]
emitting = false
amount = 300
lifetime = 3.0
explosiveness = 0.97
process_material = SubResource( 2 )
script = ExtResource( 5 )

[connection signal="timeout" from="PowerupPill/ExplosionTimer" to="PowerupPill" method="_on_ExplosionTimer_timeout"]
[connection signal="timeout" from="PowerupPill/CountdownTimer" to="PowerupPill" method="_on_CountdownTimer_timeout"]
